# This file is used to configure your project.
# Read more about the various options under:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# https://setuptools.pypa.io/en/latest/references/keywords.html


[metadata]
name = dgufs
description = A Python implementation of the The Dependence Guided Unsupervised Feature Selection algorithm by Jun Guo and Wenwu Zhu (2018)
license = MIT
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
# Add here related links, for example:
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any

# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Intended Audience :: Science/Research
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

python_requires = >=3.8

install_requires =
    scikit-learn>=1.0
    numpy #>=1.20, <=1.23
    pydantic<2.0
    scipy

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]
# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    jupyter
    notebook
    bandit
    black
    black-nb
    darglint
    docutils<0.18
    doc8
    flake8
    isort
    nbconvert
    nbformat
    pytest-benchmark
    pytest-xdist[psutil]
    pytest-xprocess
    igraph
    py # pytest 7.2.0 bug https://github.com/pytest-dev/pytest-xprocess/issues/110
    pre-commit
    tabulate
    click

all =
    importlib-metadata;python_version<"3.8"
    %(testing)s

[tool:pytest]
addopts =
    --cov dgufs --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.1.1
package = dgufs
extensions =
    pre_commit